[package]
name    = "gabriel"
version = "0.0.2"
authors = ["saraph"]
edition = "2018"

[dependencies]
anyhow       = "1.0"
const-concat = { git = "https://github.com/Vurich/const-concat" }
libc         = "0.2"
selaphiel    = { git = "https://github.com/saraph/selaphiel", branch = "saraph" }
tokio        = { version = "1.0", features = ["fs", "macros", "net", "parking_lot", "process", "rt-multi-thread", "signal", "sync", "time"] }

[profile.release]
lto = "thin"
